# MIG_SDK_EXPORT

./: .cursorignore  .env.example  .gitattributes  .gitignore  ANALYSIS_TRADING_REFERENCES.md  BENCHMARKS.md  BENCHMARK_EXECUTIVE_SUMMARY.md  BENCHMARK_QUICK_START.md  CLEANUP_PLAN.md  COMPARACION_PONDERACION_GRAFO.md  CONTRIBUTING.md  CURSOR_MEMORY_OPTIMIZATION.md  CURSOR_OOM_FIX.md  Cargo.toml  Config.toml  INFORME_PRECIOS_TOKEN.md  INSTRUCTIVO_POBLAMIENTO_HOT_POOL_MANAGER.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  METRICS_P0_P1_VERIFICATION.md  MIGRATION_IMPACT_ANALYSIS.md  MIGRATION_PROGRESS.md  README.md  SCHEMA_MIGRATION_PLAN.md  SDK_SCOPE.md  analyze_events.py  analyze_flight_recorder.py  analyze_flight_recorder.sh  analyze_system_interactions.py  fix_fork_migration.bat  fix_fork_migration.sh  run_full_analysis.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: benchmark_report_20260114_025235.md  benchmark_report_20260114_031019.md  benchmark_report_20260114_141452.md  benchmark_report_20260114_141632.md  benchmark_report_20260114_162249.md  benchmark_report_20260115_152706.md  benchmark_report_20260116_022201.md  benchmark_report_20260116_034811.md  benchmark_report_20260116_043704.md  benchmark_report_20260116_135405.md  benchmark_report_20260116_145939.md  benchmark_report_20260116_171120.md  benchmark_report_20260116_172855.md  benchmark_report_20260116_183030.md  benchmark_report_20260116_192752.md  benchmark_report_20260116_193932.md  benchmark_report_20260116_200252.md  benchmark_report_20260116_205514.md  benchmark_report_20260116_213247.md  benchmark_report_20260116_214309.md  benchmark_report_20260116_220114.md  benchmark_report_20260117_022704.md  benchmark_report_20260117_023224.md  benchmark_report_20260117_035443.md  benchmark_report_20260117_125635.md  benchmark_report_20260117_132815.md  benchmark_report_20260117_141057.md  benchmark_report_20260118_003930.md  benchmark_report_20260118_014726.md  benchmark_report_20260118_223458.md  benchmark_report_20260119_010044.md  benchmark_report_20260119_134100.md  benchmark_report_20260119_140827.md  benchmark_report_20260119_141938.md  benchmark_report_20260119_141958.md  benchmark_report_20260119_143847.md  benchmark_report_20260119_145546.md  benchmark_report_20260119_151301.md  benchmark_report_20260119_194524.md  benchmark_report_20260119_202404.md
docker_infrastructure/: .env.example  .gitignore  README.md  docker-compose.yml
docs/: AI_WORKFLOW.md  ANALYSIS_REVIEW.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARKS.md  BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  COMPLETE_INTERACTIONS_ANALYSIS.md  COMPLETE_SYSTEM_ANALYSIS.md  DB_MIGRATION_GUIDE.md  (+30 more)
(+150 files in other folders)
