[package]
name = "mig-topology-sdk"
version = "0.1.0"
edition = "2021"
description = "MIG Topology SDK: A high-performance Rust library for real-time liquidity mapping and pool validation on Arbitrum One"
authors = ["MIG Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mig-labs/mig-topology-sdk"
documentation = "https://docs.rs/mig-topology-sdk"
keywords = ["defi", "liquidity", "topology", "arbitrum", "dex", "uniswap", "balancer"]
categories = ["blockchain", "web-programming"]

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
url = "2.2"
config = { version = "0.13", features = ["toml"] }
dotenv = "0.15"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
rust_decimal = { version = "1.32", features = ["serde"] }
thiserror = "1.0"
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
governor = { version = "0.6", features = ["std"] }
tokio-retry = "0.3"
rand = "0.8"
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"], optional = true }
dashmap = "5.5"
arc-swap = "1.6"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
redis = ["dep:redis"]
observability = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:tracing-subscriber"]

[[bin]]
name = "background_discoverer"
path = "bin/background_discoverer.rs"

[[example]]
name = "basic_setup"
path = "examples/basic_setup.rs"

[[example]]
name = "liquidity_path"
path = "examples/liquidity_path.rs"

[[example]]
name = "realtime_updates"
path = "examples/realtime_updates.rs"

[[example]]
name = "test_concurrent_rpc"
path = "examples/test_concurrent_rpc.rs"

[dev-dependencies]
itertools = "0.10.5"
tempfile = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

